css/main.css
:root {
  --dark-grey: #333333e6;
  --light-grey: #dadada;
  --yellow: hsl(59, 73%, 50%);
  --fill: rgb(11, 106, 90);
  --bg: rgb(247, 247, 247);
  --vw: 1vw;
}
::-webkit-scrollbar {
  display: none;
}
* {
  padding: 0;
  margin: 0;
  font-family: "M PLUS Rounded 1c", sans-serif;
  color: var(--dark-grey);
  position: relative;
  box-sizing: border-box;
}
body {
  overflow-x: hidden;
  background-color: var(--bg);
}
nav.main {
  border-bottom: 1px dotted var(--light-grey);
  position: fixed;
  display: none;
  height: 56px;
  width: calc(100 * var(--vw));
  padding: 0 calc(6 * var(--vw));
  background-color: white;
  z-index: 19;
  grid-template-columns: auto auto auto auto auto auto auto auto 40px 40px 50px;
  justify-items: left;
  align-items: baseline;
}
nav.main * {
  font-size: 17px;
  line-height: 47px;
  cursor: pointer;
}
nav.main span {
  border-bottom: 5px solid var(--yellow);
  top: 6px;
  margin-right: 7px;
}

nav.main span.uncheck {
  color: var(--light-grey);
  border-bottom: none;
}
nav.main span.uncheck:hover {
  color: var(--dark-grey);
}
nav.main div.gits {
  grid-column-start: 9;
  height: 50px;
  overflow: hidden;
  transition: height 0.2s ease-out;
}
nav.main div.gits:hover {
  height: 130px;
}
nav.main div.gits p {
  font-size: 9px;
  line-height: 12px;
}
nav.main a {
  text-decoration: none;
  top: 7px;
}
nav.main a img {
  height: 25px;
  top: 5px;
  opacity: 0.8;
}
nav.main a.email {
  font-size: 1em;
}
.burger {
  display: none;
  position: fixed;
  padding-top: 12px;
  padding-left: calc(3 * var(--vw));
  font-size: 25px;
  z-index: 110;
  cursor: pointer;
}
.burger p {
  padding: 0;
}

footer {
  font-size: 13px;
  font-weight: 500;
  padding: 1em;
  text-align: center;
  color: var(--dark-grey);
  background: white;
}
.bg-color {
  height: 100vh;
  width: calc(100 * var(--vw));
  position: fixed;
  top: 0;
  left: 0;
  background-color: var(--bg);
}
svg {
  width: calc(100 * var(--vw));
  position: relative;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke: var(--dark-grey);
  fill: none;
}
svg#dotted-lines {
  width: calc(110.3 * var(--vw));
  position: absolute;
  top: calc(-0.2 * var(--vw));
  left: calc(-10 * var(--vw));
}
svg#title {
  stroke-width: 4;
  z-index: 11;
}
g#i g {
  stroke-width: 0;
}
svg#title text {
  font-size: 29px;
  font-weight: 300;
  fill: var(--dark-grey);
}
svg#title {
  position: fixed;
}
#i {
  transform-origin: 50%;
  stroke-width: 4;
}
.triangleParts {
  stroke-width: 4;
}
svg#changingShape {
  width: calc(190 * var(--vw));
  top: calc(-16 * var(--vw));
  left: calc(-8 * var(--vw));
  z-index: 13;
}
text {
  stroke-width: 2;
}
.rolling {
  stroke-width: 2.5;
}
/* polygon:not(.shadow):not(.triangle) {
  cursor: pointer;
} */
.shadow {
  stroke: none;
  fill: var(--fill);
  opacity: 0.1;
  /* fill: rgba(255, 255, 255, 0.7); */
  pointer-events: none;
}
path {
  stroke-width: 2;
  stroke: #333333;
  fill: #333333;
}
#changingShape line {
  stroke-width: 1;
  stroke-dasharray: 2 3;
  stroke-dashoffset: 2;
  pointer-events: none;
  opacity: 0.8;
}
.group {
  pointer-events: none;
  font-size: 23px;
  display: none;
  font-weight: 100;
}
foreignObject.other span.project {
  cursor: pointer;
}
foreignObject nav {
  width: 119px; /* not dynamic here, need to change */
  text-align: right;
  font-size: 9px;
  height: 0;
  overflow: hidden;
}
foreignObject p {
  line-height: 24px;
  font-weight: 500;
  pointer-events: none;
  opacity: 0.8;
}
.side-tech {
  font-size: 12px;
}
.side-tech ul {
  list-style: square;
}
.side-tech * {
  font-weight: 300;
  opacity: 0.8;
}
.chart {
  padding: 0 calc(8 * var(--vw));
  width: 97.5%;
}
#about {
  width: 100%;
  background: white;
  padding: calc(6 * var(--vw)) calc(8 * var(--vw)) calc(7 * var(--vw))
    calc(14 * var(--vw));
  display: grid;
  grid-template-columns: calc(33 * var(--vw)) calc(36 * var(--vw));
  grid-template-rows: auto auto;
  grid-column-gap: calc(6 * var(--vw));
  grid-row-gap: 10px;
}
#about.hide {
  display: none;
}
#about > div:nth-of-type(1) {
  display: grid;
  grid-template-columns: 80px auto;
  grid-column-gap: 50px;
}
#about .intro {
  grid-column-start: 1;
  grid-row-start: 2;
}
#about .self-others {
  grid-column-start: 2;
  grid-row-start: 1;
  grid-row: span 2;
}
img.portrait {
  width: 100%;
  height: auto;
}
.status {
  padding: calc(6 * var(--vw)) 0 calc(6 * var(--vw)) calc(6 * var(--vw));
  width: 100%;
}
.status p,
#about p,
footer,
.self-others li {
  font-family: "Barlow", sans-serif;
  line-height: 26px;
}
.hide {
  display: none;
}
.status div > img {
  width: 92%;
  left: 0;
  /* transform: rotate(45deg); */
}
.status p > img {
  display: inline-block;
  height: 35px;
  margin-right: 10px;
}
.project-group ul {
  list-style: none;
}
.project-group li {
  font-size: 16.63px;
}
span.project:not(.grey-out) {
  margin-right: 10px;
  cursor: pointer;
}
.other span.project {
  margin-left: 10px;
  margin-right: 0;
}
.grey-out {
  opacity: 0.3;
}
#single-project,
#single-project-square {
  z-index: 17;
  position: fixed;
  width: 0;
  height: 0;
  background-color: white;
  opacity: 0.97;
  clip-path: polygon(
    50% 0%,
    85% 15%,
    100% 50%,
    85% 85%,
    50% 100%,
    15% 85%,
    0% 50%,
    15% 15%
  );
  font-size: 16px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 50px auto;
  grid-row-gap: 30px;
  grid-column-gap: 50px;
}
#single-project-square {
  padding: 10vh 10vw;
  height: 100vh;
  overflow-y: scroll;
  width: 100vw;
  clip-path: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 111;
  grid-template-columns: 80vw;
  grid-template-rows: 50px auto 40vh;
}
#single-project-square.no-show {
  height: 0;
  width: 0;
  padding: 0;
  overflow: hidden;
}
#single-project svg {
  position: absolute;
}
#single-project h3 {
  grid-column-start: 1;
  grid-row-start: 1;
  margin-bottom: 10px;
}
/* ... */

